Fixed horizontal scroll overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
-#root {
-  width: 100vw;
+html {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   
   /* text-align: center; */
+}
+
+.root{
+  width: 100%;
 }
 
 .logo {
