--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,5 +1,5 @@
 .home{
-    width: 100vw;
+    width: 100%;
     top: 0%;
 
     
@@ -7,7 +7,7 @@
 }
 
 .top-box{
-    width: 100vw;
+    width: 100%;
     height: 80px;
     background-color: #FF00A8;
 }
@@ -15,7 +15,7 @@
 .collage{
     width: 100%;
     height: 673px;
-
+    /* padding-top: 80px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,7 +23,7 @@
     
 
     /* background: linear-gradient(180deg, #FF00A8 0%, rgba(166, 247, 255, 0.00) 100%), linear-gradient(180deg, rgba(255, 255, 255, 0.20) 0%, #0FF 100%), url('../../public/img/collage.png'), lightgray 50% / cover no-repeat; */
-    background: url('../../public/img/collage.png');
+    background: url('../../public/img/collage.png') no-repeat;
 }
 
 .head-text-container{
@@ -38,7 +38,7 @@
         text-align: center;
         text-shadow: 0px 4px 10px #FFF;
         font-family: Josefin Sans;
-        font-size: 48px;
+        font-size: 3rem;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
@@ -49,7 +49,7 @@
 .head-text-h1{
     color: #195C81;
         font-family: Josefin Sans;
-        font-size: 96px;
+        font-size: 6rem;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
@@ -60,8 +60,9 @@
     color: #FFF;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         font-family: Josefin Sans;
-        font-size: 36px;
+        font-size: 2rem;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
+    text-align: center;
 }
