--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
-
 
 a {
   font-weight: 500;
@@ -26,11 +24,14 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0px;
   display: flex;
+  flex-direction: column;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  
+  width: 100%;
+  min-width: 100%;
+  height: 100%;
   background-color: #01FEFE;
 }
 
